more tweaks to gemini

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                 <button id="brush" class="tool">🖌️ Brush</button>
                 <button id="rectangle" class="tool">⬜ Rectangle</button>
                 <button id="circle" class="tool">⭕ Circle</button>
+                <button id="fill" class="tool">🪣 Fill</button>
+                <button id="spray" class="tool">🧴 Spray</button>
                 <button id="eraser" class="tool">🧹 Eraser</button>
             </div>
             <div class="tool-section">
