grid overlay for gemini

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </div>
         <canvas id="canvas"></canvas>
         <div class="ai-control">
-            <textarea id="aiPrompt" placeholder="Tell the AI what to draw..."></textarea>
-            <button id="sendPrompt">🤖 Send to AI</button>
+            <textarea id="aiPrompt" placeholder="Enter prompt..."></textarea>
+            <button id="sendPrompt">Send</button>
         </div>
     </div>
     <script src="script.js"></script>
